--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <figure class="raket">
-        <img class= "astronaut" src="../IMG/astronaut.png" alt="astronaut" height="80" width="80">
+        <img class= "astronaut" src="../img/astronaut.png" alt="astronaut" height="80" width="80">
 
     <svg id="rocket" width="1000" height="1000" xmlns="http://www.w3.org/2000/svg" version="1.1" viewBox="0 0 1000 1000">
         <polygon class="vleugelrechts" points="300, 450, 300, 325, 350,450"/>
